[package]
name = "rust_os"
version = "0.1.0"
authors = ["emorgan"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[test]]
name = "should_panic"
harness = false

[[test]]
name = "stack_overflow"
harness = false

[dependencies]
bootloader = "0.9.3"
volatile = "0.2.6"
spin = "0.5.2"
# Allows us to use the in and out assembly instrs for exiting QEMU
x86_64 = "0.11.0"
# Allows us to program to a serial port in QEMU
uart_16550 = "0.2.0"
# Allows us to easily program the Programmable Interrupt Controllers (PICs)
pic8259_simple = "0.2.0"
# For reading scancodes from the keyboard
pc-keyboard = "0.5.1"

[dependencies.lazy_static]
version = "1.0"
features = ["spin_no_std"]

# This allows us to exit QEMU from the guest system.
# It provides us port-mapped io on port 0xf4 with a size of 4 bytes.
[package.metadata.bootimage]
test-args = [
  "-device", "isa-debug-exit,iobase=0xf4,iosize=0x04", "-serial", "stdio",
  "-display", "none" # Don't display a window 
]
test-success-exit-code = 33 
#test-timeout = 300 # seconds

